--- a/src/erpaKablo/WebAPI/appsettings.Development.json
+++ b/src/erpaKablo/WebAPI/appsettings.Development.json
@@ -4,6 +4,86 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "UseAzureKeyVault": false,
+  "ConnectionStrings": {
+    "ErpaKabloDb": "User ID=postgres;Password=1071;Host=localhost;Port=5432;Database=ErpaKabloDb;",
+    "ErpaKabloDbMySQL": "server=localhost;port=3306;database=erpa;user=root;password=23091983",
+    "Redis": "localhost:6379"
+  },
+  "Storage": {
+    "ActiveProvider": "cloudinary",
+    "Providers": {
+      "LocalStorage": {
+        "Url": "https://localhost:5199/"
+      },
+      "Google": {
+        "Url": "https://storage.cloud.google.com/erpaotomasyonkablo",
+        "CredentialsFilePath": "/Users/muratfirtina/Projects/erpaotomasyonkablo-430512-98d33ba0ee2c.json"
+      },
+      "Cloudinary": {
+        "CloudName": "mininghq",
+        "ApiKey": "448981433886816",
+        "ApiSecret": "VQK6iap7tdBKIrNqp73WVZT1Zl0",
+        "Url": "https://res.cloudinary.com/mininghq/"
+      }
+    },
+    "CompanyAssets": {
+      "LogoPath": "/company/logos/tumdex-20241202122401.png"
+    }
+  },
+  
+  "AngularClientUrl": "http://localhost:4200",
+  "Icons": {
+    "PasswordReset": "assets/icons/password-reset.png"
+  },
+  "CompanyInfo": {
+    "Logo": "assets/images/logo.png",
+    "Name": "TUMdex",
+    "Address": "Örnek Mahallesi, Örnek Sokak No:1, İstanbul",
+    "Phone": "+90 212 XXX XX XX",
+    "Email": "global@tumtrading.com",
+    "SocialMedia": {
+      "Facebook": "https://facebook.com/tumtrading",
+      "Twitter": "https://twitter.com/tumtrading",
+      "LinkedIn": "https://linkedin.com/company/tumtrading",
+      "Icons": {
+        "Facebook": "assets/icons/facebook.png",
+        "Twitter": "assets/icons/twitter.png",
+        "LinkedIn": "assets/icons/linkedin.png"
+      }
+    }
+  },
+  "Email": {
+    "Provider": "Yandex",
+    "FromName": "TUM Trading",
+    "FromAddress": "yavuz@tumtrading.com",
+    "Providers": {
+      "Yandex": {
+        "Username": "yavuz@tumtrading.com",
+        "Password": "iikeozhjrhcxnxgi",
+        "SmtpServer": "smtp.yandex.com",
+        "Port": 465
+      }
+    }
+  },
+  "Newsletter": {
+    "SendTime": {
+      "DayOfMonth": 5,
+      "Hour": 5,
+      "Minute": 0
+    },
+    "Throttling": {
+      "MaxConcurrentEmails": 5,
+      "DelayBetweenEmails": 1000
+    },
+    "Templates": {
+      "BaseUrl": "https://res.cloudinary.com/mininghq/company/email-templates/",
+      "MonthlyNewsletter": "monthly-newsletter.html"
+    },
+    "DefaultImages": {
+      "ProductPlaceholder": "https://res.cloudinary.com/mininghq/company/defaults/product-placeholder.png"
+    }
   }
 }
 
