--- a/src/erpaKablo/Infrastructure/Infrastructure.csproj
+++ b/src/erpaKablo/Infrastructure/Infrastructure.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="AWSSDK.S3" Version="3.7.410.9" />
         <PackageReference Include="Azure.Identity" Version="1.12.0" />
         <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.7.0" />
         <PackageReference Include="CloudinaryDotNet" Version="1.26.2"/>
