--- a/src/erpaKablo/Infrastructure/Infrastructure.csproj
+++ b/src/erpaKablo/Infrastructure/Infrastructure.csproj
@@ -20,6 +20,8 @@
         <PackageReference Include="Google.Cloud.Storage.V1" Version="4.10.0"/>
         <PackageReference Include="HtmlSanitizer" Version="8.1.870" />
         <PackageReference Include="MailKit" Version="4.8.0" />
+        <PackageReference Include="MassTransit" Version="8.3.4" />
+        <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.4" />
         <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17"/>
         <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1"/>
