--- a/src/erpaKablo/Persistence/Persistence.csproj
+++ b/src/erpaKablo/Persistence/Persistence.csproj
@@ -36,4 +36,8 @@
       <Compile Remove="Repositories\DescriptionRepository.cs" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models\" />
+    </ItemGroup>
+
 </Project>
